--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-Flask==2.2.5
+Flask==2.3.3
+googlemaps==4.10.0
+polyline==2.0.0
+folium==0.14.0
 Flask-Session==0.5.0
-googlemaps
-polyline
-folium
-branca
-gunicorn
-pandas
-openpyxl
-
+pandas==2.0.3
+openpyxl==3.1.2
+numpy==1.24.3
+geopy==2.4.1
+branca==0.6.0
+gunicorn==21.2.0
